fixed rotation ship going offscreen

--- a/styles.css
+++ b/styles.css
@@ -97,8 +97,11 @@ div.secretaries figcaption {
 
 #rotationShips,
 #nonrotationShips {
+    margin: auto;
+    justify-content: center;
+    width: 700px;
     display: flex;
-    justify-content: center;;
+    flex-wrap: wrap;
 }
 
 figure.ultra {
@@ -157,6 +160,7 @@ img.rare {
     height: 100%;
     overflow: auto;
     padding-top: 30px;
+
     background-color: rgb(0,0,0);
     background-color: rgb(0,0,0,0.4);
 }
